--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@
   text-align: center;
 }
 .data{
-  border: 1px solid black;
-  margin: 10px;
-  width: 200px;
+  border: 2px solid black;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  width: 300px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+ 
   text-align: center;
 }
 
